Prevent horizontal scroll.

--- a/global.css
+++ b/global.css
@@ -8,6 +8,7 @@ html, body {
 	position: relative;
 	width: 100%;
 	height: 100%;
+	overflow-x: hidden;
 }
 
 body {
